# python-azure-ai-analyze-text

./: README.md  pyproject.toml
src/python-azure-ai-analyze-text/: main.py
src/python-azure-ai-analyze-text/reviews/: review1.txt  review2.txt  review3.txt  review5.txt
